# 6th_Sense

./: .gitignore  BLOCKCHAIN_INFO.md  CHANGELOG.md  PHAM_BLOCKCHAIN_LOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
examples/: app_host_attach.py  robot_udp_sender.py  run_sik_mpk_session.py
examples/monitoring/: GRAFANA_QUERIES.md  RUN_PROMETHEUS.md  alert_rules.yml  grafana_dashboard.json  prometheus.yml
scripts/: generate_signature.py
sensory_input_kernel/: __init__.py  kernel.py  sensory_kernel.py
sensory_input_kernel/affect/: __init__.py  reflex_gate.py  sixth_sense.py
sensory_input_kernel/binding/: __init__.py  multisensory_binding.py
sensory_input_kernel/bridge/: __init__.py  action_bridge.py  emotion_bridge.py  felt_sense_bridge.py  memory_bridge.py  mpk_bridge.py  snn_bridge.py
sensory_input_kernel/channels/: __init__.py  audition.py  touch.py  vision.py
sensory_input_kernel/contracts/: __init__.py  event_schema.py  schemas.py
sensory_input_kernel/ingress/: __init__.py  base.py  camera_stub.py  host_event.py  jsonl_tail.py  mic_stub.py  touch_stub.py  udp_json.py
sensory_input_kernel/memory/: __init__.py  sensory_trace.py
sensory_input_kernel/runtime/: __init__.py  daemon_cli.py  edge_loop.py  health_server.py  profiles.py
sensory_input_kernel/salience/: __init__.py  stimulus_scoring.py
tests/: test_full_coverage.py  test_sensory_input_kernel.py
