[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sensory-input-kernel"
version = "0.9.2"
description = "Five-sense input kernel with reaction and memory loop"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
sensory-edge-daemon = "sensory_input_kernel.runtime.daemon_cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
